# LinguaFlow

./: .env.example  .gitignore  Cargo.toml  README.md  REVIEW.md
src/: app.rs  audio.rs  llm.rs  main.rs  memory.rs  stt.rs  tts.rs
